syntax = "proto3";

option go_package = "dist/pb";

package proto;


service Communication {
    rpc HelloTest(Empty) returns (Empty);
    rpc RunCommand(CommandParams) returns (Empty);
    rpc BroadcastChanges(FulcrumHistory) returns (FulcrumHistory);
}

enum Command {
    ADD_CITY = 0;
    DELETE_CITY = 1;
    UPDATE_NAME = 2;
    UPDATE_NUMBER = 3;
    GET_NUMBER_REBELS = 4;
    CHECK_CONSISTENCY = 5;
}

message TimeVector {
    repeated uint32 time = 1;
}

message CommandParams {
    optional Command command = 1;
    optional string planet_name = 2;
    optional string city_name = 3;
    optional string new_city_name = 4;
    optional uint32 new_num_of_rebels = 5;
}

message FulcrumHistory {
    repeated CommandParams planet_history = 1;
}


message Empty {}